<resources>
    <string name="app_name" translatable="false">Cyberpunk</string>
    <string name="fragment_city_data_generator_tv_head">Widget creation</string>
    <string name="create">Create</string>
    <string name="city">City:</string>
    <string name="alert_image" translatable="false">alert_image</string>
    <string name="country">A country:</string>
    <string name="search">Search…</string>
    <string name="fragment_country_list_tv">A country</string>
    <string name="fragment_city_data_generator_spn_country">determine location</string>
    <string name="fragment_city_data_generator_spn_city">choose from the list</string>
    <string name="fragment_city_data_generator_tv_country_name">need to choose</string>
    <string name="fragment_country_list_tv_code">The code</string>
    <string name="on" translatable="false">On</string>
    <string name="network" translatable="false">Network</string>
    <string name="gps" translatable="false">GPS</string>
    <string name="left_button" translatable="false">left button</string>
    <string name="tv_date" translatable="false">-</string>
    <string name="right_button" translatable="false">right button</string>
    <string name="loading" translatable="false">click to update</string>
    <string name="loading_2" translatable="false">Loading…</string>
    <string name="pressure">Pressure</string>
    <string name="value">Value</string>
    <string name="priboru">Devices</string>
    <string name="dimensions" translatable="false">meter/sec</string>
    <string name="icon_info" translatable="false">icon info</string>
    <string name="long_tire" translatable="false">—</string>
    <string name="help" translatable="false">help</string>
    <string name="hpa" translatable="false">hPa</string>
    <string name="wind_speed">Wind</string>
    <string name="meter_sec" translatable="false">meter/sec</string>
    <string name="humidity">Humidity</string>
    <string name="persent" translatable="false">%</string>
    <string name="rain_name">Rain</string>
    <string name="snow">Snow</string>
    <string name="delete_widget">Delete widget</string>
    <string name="mm_day" translatable="false">mm/day</string>
    <string name="discriprion_rl_info">* averaged data for every day is shown</string>
    <string name="config_head">Select your widget from the list.</string>
    <string name="config_body_descr_1">* you may not have yet created a widget, please do it in the app</string>
    <string name="config_body_descr_2">* the weather update is automatic (on some devices like Xiaomi, Meizu, Huawei etc. You need to allow app to work on the background)</string>
    <string name="config_body_descr_3">* the app consumes low amount of energy resourses and makes no side/unnecessary requests</string>
    <string name="config_body_descr_4">* the widget affords forecast for close upcoming dates, just tap on the sides of the screen</string>
    <string name="btn_config">Choose</string>
    <string name="autor_group" translatable="false">2019 Orlinskas Development</string>
    <string name="back">yesterday</string>
    <string name="next">tomorrow</string>
    <string name="greate_widget_in_app">Create a widget in the app</string>
    <string name="open_data">Welcome, add city</string>
    <string name="internet_is_off">Internet is off</string>
    <string name="avialable_from">Available from</string>
    <string name="to">to</string>
    <string name="empty_data">No data yet</string>
    <string name="update">" - updated."</string>
    <string name="error_get_data">Error receiving data</string>
    <string name="load_cities_for">Loading cities for -</string>
    <string name="city_2">City</string>
    <string name="have">Available -</string>
    <string name="cities">cities.</string>
    <string name="search_working">The seach\'s already started, please wait..</string>
    <string name="acces_permission">Allow access or turn on GPS</string>
    <string name="not_found">Not found</string>
    <string name="almost_have">Already created</string>
    <string name="error_widget_create">Error creating widget</string>
    <string name="uncorrect_place">Invalid location</string>
    <string name="not_writed_plase">Location not specified</string>
    <string name="warning">the confirmation</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="all_desc_1">1. The forecast is provided by OpenWeatherMap service.</string>
    <string name="forecast">Forecast</string>
    <string name="desc_2">1. Appliances show averaged numbers on current graph data!</string>
    <string name="widget">Widget</string>
    <string name="widget_image" translatable="false">widget_image</string>
    <string name="widget_desc_1">1. The widget is divided into 3 zones.</string>
    <string name="widget_desc_2">2. Left zone spins back one day.</string>
    <string name="widget_desc_3">3. The right zone spins one day forward.</string>
    <string name="widget_desc_4">4. The central zone updates data if it is possible.</string>
    <string name="repost">Share</string>
    <string name="help_pls">Help</string>
    <string name="message">Developer Relations</string>
    <string name="question">Technical issues, bugs</string>
    <string name="gmail" translatable="false">orlinskas.development@gmai.com</string>
    <string name="partner_web" translatable="false">www.matrix-creators.com</string>
    <string name="mail">Personal mail</string>
    <string name="inst" translatable="false">http://www.instagram.com/orlinskas</string>
    <string name="gmail_im" translatable="false">gmail_im</string>
    <string name="inst_im" translatable="false">inst_im</string>
    <string name="refresh">Refresh</string>
    <string name="almost_refresh">Already updated</string>
    <string name="open_settings">Open Settings</string>
    <string name="desc_5">* tapping in the middle of the widget updates the forecast, if it is possible</string>
    <string name="all">General</string>
    <string name="share_text" translatable="false">\"Cyberpunk 2077\" - Wake the f*** Up Android. https://play.google.com/store/apps/developer?id=Orlinskas.Development</string>
    <string name="share" translatable="false">Share</string>
    <string name="image" translatable="false">image</string>
    <string name="create_widget" translatable="false">Create widget</string>
    <string name="city_with_double_pins" translatable="false">City:</string>
    <string name="country_with_double_pins" translatable="false">Country:</string>
    <string name="need_to_choose" translatable="false">need to choose</string>
    <string name="widgets" translatable="false">Widgets</string>
    <string name="menu" translatable="false">MENU</string>
    <string name="widget_head" translatable="false">WIDGET</string>
    <string name="update_big" translatable="false">UPDATE</string>
    <string name="delete_big" translatable="false">DELETE</string>
    <string name="orlinskas_development" translatable="false">orlinskas development</string>
    <string name="id" translatable="false">id</string>
    <string name="code" translatable="false">Code</string>
    <string name="empty_row" translatable="false">-</string>
    <string name="fluctuations_in_atmospheric_pressure_headaches_are_possible">- Fluctuations in atmospheric pressure. (Headaches are possible)</string>
    <string name="surface_icing_possible">- Surface icing possible</string>
    <string name="uncomfortable_wind_speed">- Uncomfortable wind speed</string>
    <string name="uncomfortable_rainfall">- Uncomfortable rainfall</string>
    <string name="light" translatable="false">LIGHT</string>
    <string name="loading_3" translatable="false">Loading...</string>
    <string name="console" translatable="false">Console.</string>
    <string name="our_partner">Our partner</string>

    <string-array name="spinner">
        <item>choose…</item>
    </string-array>
</resources>
