<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_help_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/im_background_3"
    android:scrollbarSize="1dp"
    android:scrollbarThumbVertical="@color/colorCyberpunkRed">

    <RelativeLayout
        android:id="@+id/activity_help_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/activity_help_rl_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/grey_background">

            <TextView
                android:id="@+id/activity_help_all_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/all"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorCyberpunkRed" />

            <TextView
                android:id="@+id/activity_help_all_desc_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_help_all_tv"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/all_desc_1"
                android:textAlignment="viewStart"
                android:textColor="@color/colorCyberpunkRed"
                android:textSize="18sp" />

            <View
                android:id="@+id/activity_help_all_view_line_top"
                style="@style/Divider"
                android:layout_below="@id/activity_help_all_tv"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_help_rl_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_help_rl_all"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/grey_background">

            <TextView
                android:id="@+id/activity_help_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/forecast"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorCyberpunkRed" />

            <TextView
                android:id="@+id/activity_help_desc_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_help_tv"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/desc_2"
                android:textAlignment="viewStart"
                android:textColor="@color/colorCyberpunkRed"
                android:textSize="18sp" />

            <View
                android:id="@+id/activity_help_view_line_top"
                style="@style/Divider"
                android:layout_below="@id/activity_help_tv"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_help_rl_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/activity_help_rl_forecast"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/grey_background">

            <ImageView
                android:id="@+id/activity_help_widget_iv"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@id/activity_help_rl_head_pain"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/widget_image"
                app:srcCompat="@drawable/image_small_widget" />

            <RelativeLayout
                android:id="@+id/activity_help_rl_precipitation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_help_widget_tv"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/activity_help_iv_precipitation"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/im_percipitation_on" />

                <TextView
                    android:id="@+id/activity_help_tv_precipitation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/activity_help_iv_precipitation"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/uncomfortable_rainfall"
                    android:textColor="@color/colorCyberpunkRed"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_help_rl_wind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_help_rl_precipitation">

                <ImageView
                    android:id="@+id/activity_help_iv_wind"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/im_wind_on" />

                <TextView
                    android:id="@+id/activity_help_tv_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/activity_help_iv_wind"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/uncomfortable_wind_speed"
                    android:textColor="@color/colorCyberpunkRed"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_help_rl_ice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_help_rl_wind">

                <ImageView
                    android:id="@+id/activity_help_iv_ice"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/im_wet_on" />

                <TextView
                    android:id="@+id/activity_help_tv_ice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/activity_help_iv_ice"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/surface_icing_possible"
                    android:textColor="@color/colorCyberpunkRed"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/activity_help_rl_head_pain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_help_rl_ice">

                <ImageView
                    android:id="@+id/activity_help_iv_head_pain"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/im_head_on" />

                <TextView
                    android:id="@+id/activity_help_tv_head_pain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@id/activity_help_iv_head_pain"
                    android:fontFamily="sans-serif-condensed-light"
                    android:text="@string/fluctuations_in_atmospheric_pressure_headaches_are_possible"
                    android:textAlignment="viewStart"
                    android:textColor="@color/colorCyberpunkRed"
                    android:textSize="18sp" />
            </RelativeLayout>

            <TextView
                android:id="@+id/activity_help_widget_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/widget"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorCyberpunkRed" />

            <TextView
                android:id="@+id/activity_help_widget_desc_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_help_widget_iv"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/widget_desc_1"
                android:textAlignment="viewStart"
                android:textColor="@color/colorCyberpunkRed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/activity_help_widget_desc_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_help_widget_desc_1"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/widget_desc_2"
                android:textAlignment="viewStart"
                android:textColor="@color/colorCyberpunkRed"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/activity_help_widget_desc_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_help_widget_desc_2"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/widget_desc_3"
                android:textAlignment="viewStart"
                android:textColor="@color/colorCyberpunkRed"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/activity_help_widget_desc_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_help_widget_desc_3"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="60dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/widget_desc_4"
                android:textAlignment="viewStart"
                android:textColor="@color/colorCyberpunkRed"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/activity_help_desc_tv_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/cyberpunk_eng"
                android:text="@string/orlinskas_development"
                android:textAlignment="center"
                android:textColor="@color/colorCyberpunkRed" />

            <View
                android:id="@+id/activity_help_widget_view_line_top"
                style="@style/Divider"
                android:layout_below="@id/activity_help_widget_tv"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp" />
        </RelativeLayout>


    </RelativeLayout>

</ScrollView>