<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/config_layout_sv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/im_background_3">

    <RelativeLayout
        android:id="@+id/config_layout_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/grey_background">

        <Button
            android:id="@+id/config_layout_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/config_layout_desc_5"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/im_btn_off_empty"
            android:onClick="onClickCreate"
            android:text="@string/btn_config"
            android:textColor="@color/colorCyberpunkRed"
            android:textSize="14sp" />

        <Spinner
            android:id="@+id/config_layout_spn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/config_layout_view_line_top"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/config_layout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/cyberpunk_2"
            android:text="@string/config_head"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/colorCyberpunkRed"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/config_layout_desc_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/config_layout_spn"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_body_descr_3"
            android:textAlignment="viewStart"
            android:textColor="@color/colorCyberpunkRed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/config_layout_desc_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_layout_desc_3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/config_body_descr_4"
            android:textAlignment="viewStart"
            android:textColor="@color/colorCyberpunkRed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/config_layout_desc_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/config_layout_desc_4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/desc_5"
            android:textAlignment="viewStart"
            android:textColor="@color/colorCyberpunkRed"
            android:textSize="18sp" />

        <View
            android:id="@+id/config_layout_view_line_top"
            style="@style/Divider"
            android:layout_below="@id/config_layout_tv"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp" />

        <View
            android:id="@+id/config_layout_view_line_bot"
            style="@style/Divider"
            android:layout_below="@id/config_layout_spn"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/activity_city_data_tv_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:fontFamily="@font/cyberpunk_eng"
        android:text="@string/orlinskas_development"
        android:textColor="@color/colorCyberpunkRed"
        android:textSize="12sp" />

</RelativeLayout>